# nyu-gpu-final-project

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  exp_data.csv  exp_data_avg.csv  exp_data_crunching.ipynb  exp_mem_data.csv
src/bfs/: bfs_cuda.cu  bfs_openmp.cpp  bfs_seq.cpp
src/kmeans/: kmeans_cuda.cu  kmeans_openmp.cpp  kmeans_openmp.cu  kmeans_seq.cpp
src/kmeans/utils/: kmeans_exception.cpp  kmeans_exception.h  kmeans_helper.h  parse_args.cpp  parse_args.h  parse_input.cpp  parse_input.h  random.h  string_helper.h
src/nqueens/: kmeans_cuda.cu  kmeans_seq.cpp  nqueens_cuda.cu  nqueens_openmp.cpp  nqueens_seq.cpp
src/warshall/: generategraph.cpp  warshall_cuda.cu  warshall_openmp.cpp  warshall_seq.cpp
